--- a/views/arena-detail.htm
+++ b/views/arena-detail.htm
@@ -1,10 +1,1 @@
-<h2>Arena Detail for {{arena.title}}</h2>
-
-<h4>Blue Ribbon Challenges ({{arena.completedCount()}} completed)</h4>
-<ol>
-	<li ng-repeat="wave in arena.waves">
-		<a href="#/{{arena.id}}/{{wave.id}}">{{wave.description}}</a>
-	</li>
-</ol>
-
-<a href="#/">&lt;&lt; Back to Arenas</a>
+<h4 id="panel-title">Arena Detail for {{arena.title}}</h4>
