--- a/views/wave-detail.htm
+++ b/views/wave-detail.htm
@@ -1,4 +1,4 @@
-<h2>Wave Detail for {{arena.title}}, Wave {{wave.id}}</h2>
+<h2>Wave {{wave.id}}</h2>
 
 <table>
 	<tbody>
@@ -48,5 +48,3 @@
 		</tr>
 	</tbody>
 </table>
-
-<a href="#/{{arena.id}}/">&lt;&lt; Back to {{arena.title}}</a>
