Added YouTube component and list checkboxes
Added a new component to display embedded YouTube videos with optional
start and stop times
Added checkboxes to the wave list view to allow waves to be marked as
complete from the list

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,14 @@
 }
 
 .content-padding { padding: 5px; }
+
+table.wave-detail-display td
+{
+	vertical-align: top;
+}
+
+table.wave-detail-display .wave-data-label
+{
+	font-weight: bold;
+	white-space: nowrap;
+}
