Restructuring, numeric enforcement
Refactored application files, split all components out into individual
files, new directory structure
Removed IDataInterface (unnecessary)
Added a keyCode utility service
Added a numeric-keys directive to enforce entry of numbers into an input
Added numeric key enforcement to the high score entry

--- a/templates/partials/arena-detail.htm
+++ b/templates/partials/arena-detail.htm
@@ -8,7 +8,7 @@
 
 <div class="arena-high-score">
     <label for="arena-highscore">High Score</label>
-    <input type="textbox" id="arena-highscore" name="arena-highscore" ng-model="arena.highScore" />
+    <input type="textbox" id="arena-highscore" name="arena-highscore" ng-model="arena.highScore" numeric-keys />
     <button ng-click="saveHighscore()">Save</button>
 </div>
 
