--- a/templates/partials/wave-list.htm
+++ b/templates/partials/wave-list.htm
@@ -1,7 +1,7 @@
 <h4 class="panel-title">{{arena.title}} Blue Ribbon Challenges ({{arena.completedCount()}} completed)</h4>
 <ol>
 	<li ng-repeat="wave in arena.waves">
-		<input type="checkbox" name="list-completed" ng-model="wave.complete" ng-change="updateWaveStatus(arena, wave)" />
+		<input type="checkbox" name="list-completed" ng-model="wave.complete" ng-change="setChallengeStatus(arena.id, wave.id, wave.complete)" />
 		<a href="#/{{arena.id}}/{{wave.id}}">{{wave.description}}</a>
 	</li>
 </ol>
